--- a/app/templates/new_post.html
+++ b/app/templates/new_post.html
@@ -10,6 +10,7 @@
      <nav>
         <a href="{{ url_for('main.welcome') }}">Ir a página de inicio</a>
         <a href="{{ url_for('main.list_posts') }}">Ver lista de publicaciones</a>
+        <a href="{{ url_for('main.ranking') }}">Ranking posts</a>
     </nav>
 
     <h2>Crear nueva publicación</h2>
