--- a/app/templates/bienvenida.html
+++ b/app/templates/bienvenida.html
@@ -11,6 +11,7 @@
     <nav>
         <a href="{{ url_for('main.list_posts') }}">Ver lista de publicaciones</a>
         <a href="{{ url_for('main.new_post') }}">Crear nueva publicación</a>
+        <a href="{{ url_for('main.ranking') }}">Ranking posts</a>
     </nav>
     <h2>Bienvenido a Artigow!</h2>
     
