--- a/app/container_h4_Simple/logs_container/app/templates/logs_service.html
+++ b/app/container_h4_Simple/logs_container/app/templates/logs_service.html
@@ -91,7 +91,7 @@
             }
 
             // Enviar la consulta al backend
-            fetch('http://localhost:5003/query', {
+            fetch('https://logs-service-eb2r.onrender.com/query', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
